# magnum

./: requirements.txt  setup.cfg  test-requirements.txt
magnum/: __init__.py  config.py
magnum/api/controllers/: root.py  v1.py
